all pages completed

--- a/Stylesheets/resumeSheet.css
+++ b/Stylesheets/resumeSheet.css
@@ -78,4 +78,29 @@ footer {
     text-align: center;
     padding-top: 20px;
 }
+#form {
+  margin-left: 500px;
+  padding-top: 20px;
+}
+#submitButton {
+  padding-top: 30px;
+  margin-right: 280px;
+  text-align: center;
+}
+#button {
+  padding: 10px 10px 10px 10px;
+  border-radius: 40%;
+}
+#contactPageHeading {
+margin-left: 250px;
+padding-top: 50px;
+text-align: center;
+}
+#headerParagraph {
+  font-style: italic;
+  margin-left: 250px;
+  text-align: center;
+}
+
+
 
